Fix focus visible on controls

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -8,11 +8,6 @@
   border: 1px solid transparent;
   border-radius: var(--radius);
   box-shadow: none;
-
-  &:focus,
-  &:focus-visible {
-    outline: none;
-  }
 }
 
 @mixin block {
